# dragon

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Dragon.toml  README.md  diesel.toml  go.mod  go.sum  go.work  go.work.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
apps/api-server/: Cargo.toml
apps/api-server/src/: lib.rs  main.rs
apps/api-server/src/middleware/: logger.rs
apps/client/: .prettierignore  .prettierrc  next.config.js  package.json
apps/client/src/app/: globals.scss  layout.tsx  page.tsx
apps/client/src/app/login/: page.module.scss  page.tsx
apps/client/src/app/register/: loading.module.scss  loading.tsx  page.module.scss  page.tsx
apps/server/: Cargo.toml  build.rs
apps/server/src/: client.rs  main.rs
cmd/: cmd.go
configs/: Dragon.toml
crates/auth/: Cargo.toml
crates/auth/benches/: hash_speed.rs  hash_verify_speed.rs  hash_verify_speed_invalid.rs
crates/auth/src/: lib.rs  login.rs  logout.rs  password.rs  register.rs  tests.rs  token.rs
crates/db/: Cargo.toml  build.rs
crates/db/src/: lib.rs  schema.rs  types.rs
crates/db/src/models/: mod.rs  node.rs  server.rs  template.rs  template_group.rs  token.rs  user.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs  tests.rs
crates/docker/src/container/: attach.rs  create.rs  kill.rs  mod.rs  remove.rs  restart.rs  run.rs  start.rs  stop.rs
crates/docker/src/image/: mod.rs  pull.rs  remove.rs
crates/docker/src/network/: create.rs  mod.rs  modify.rs  remove.rs
crates/docker/src/volume/: backup.rs  create.rs  mod.rs  remove.rs
crates/docker/src/wrappers/: base.rs  mod.rs  pull.rs
crates/glue/: Cargo.toml  README.md
crates/glue/src/: lib.rs  state.rs  ws.rs
deployments/: Dockerfile  bun.Dockerfile
deployments/bun/: bundle-functions.ts  create-hash-table.js
internal/common/: config.go  dev.go  platform.go  views.go
internal/middleware/: logger.go  middleware.go
internal/routes/: index.go  setup.go  util.go  wsproxy.go
migrations/2023-10-26-144032_create_users/: up.sql
migrations/2023-10-26-144033_create_nodes/: up.sql
migrations/2023-10-26-144034_create_templates/: up.sql
migrations/2023-10-26-144035_create_servers/: down.sql  up.sql
migrations/2023-10-26-151913_create_tokens/: up.sql
migrations/2023-10-26-153236_create_template_vars/: down.sql  up.sql
migrations/2023-10-26-153241_create_template_file_config/: down.sql  up.sql
migrations/2023-10-30-160951_create_template_groups/: down.sql  up.sql
migrations/2023-10-30-161034_add_template_group_id/: down.sql  up.sql
pkg/config/: config.go  env.go  json.go  toml.go  util.go  yaml.go
pkg/glue/: glue.go
pkg/logger/: logger.go
pkg/option/: option.go
pkg/sass/: binaries.go  compiler.go  defaults.go  linking.go  options.go  sass.go  style.go  types.go
scripts/: build.sh  dev.sh
views/: index.html  index.html.json  package.json  pnpm-lock.yaml
views/scss/: index.scss
views/ts/: index.ts
