[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apisrv"
path = "./src/main.rs"

[features]
default = ["standalone"]
standalone = ["dep:env_logger", "dep:dotenvy", "dep:tokio"]

[dependencies]
anyhow = "1.0.75"
auth = { version = "0.0.0", path = "../../crates/auth" }
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
chrono = "0.4.31"
db = { version = "0.0.0", path = "../../crates/db" }
docker = { version = "0.0.0", path = "../../crates/docker" }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.10.0", optional = true }
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "net"], optional = true }
