[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
api-server = { version = "0.1.0", path = "../api-server", default-features = false }
auth = { version = "0.0.0", path = "../../crates/auth" }
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
db = { version = "0.0.0", path = "../../crates/db" }
docker = { version = "0.0.0", path = "../../crates/docker" }
dotenvy = "0.15.7"
duct = "0.13.6"
env_logger = "0.10.0"
glue = { version = "0.0.0", path = "../../crates/glue" }
include_dir = "0.7.3"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
shared_child = "1.0.0"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "net", "process", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }

[build-dependencies]
cfg-if = "1.0.0"
