[package]
name = "auth"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "hash_speed"
harness = false

[[bench]]
name = "hash_verify_speed"
harness = false

[[bench]]
name = "hash_verify_speed_invalid"
harness = false

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
base64 = "0.21.5"
db = { version = "0.0.0", path = "../db" }
diesel = { version = "2.1.3", features = ["postgres"] }
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
random-string = "1.0.1"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5.1"
