[package]
name = "docker"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.74"
docker-api = "0.14.0"
futures-util = "0.3.29"

[dev-dependencies]
indicatif = "0.17.7"
serial_test = "2.0.0"
tokio = { version = "1.33.0", features = ["full"] }
