[package]
name = "glue"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "headers", "ws"] }
cfg-if = "1.0.0"
futures-util = "0.3.29"
hyper = "0.14.27"
include_dir = "0.7.3"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11.22", features = ["stream", "rustls"] }
tokio = { version = "1.33.0", features = ["rt"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls"] }
tower = "0.4.13"
tungstenite = { version = "0.20.1", features = ["rustls"] }
url = "2.4.1"
ws = "0.9.2"
